REACT/CSS - fixed too much empty space on skills scroll, and replaced some icon svg's

--- a/src/components/Sections/Hero/Skills/Skill2.module.scss
+++ b/src/components/Sections/Hero/Skills/Skill2.module.scss
@@ -82,7 +82,8 @@
     }
   }
   &-icon {
-    padding-top: 0.75rem;
+    padding: 0.75rem;
+    padding-bottom: 0;
     width: 80%;
     height: 80%;
     min-height: 70%;
